--- a/parser-games-log/package.json
+++ b/parser-games-log/package.json
@@ -1,5 +1,9 @@
 {
   "name": "parser-games-log",
+  "author": {
+    "name": "Rogério Milhomens de Queiroz",
+    "email": "rogerio.mq@gmail.com"
+  },
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
