--- a/parser-games-log/package.json
+++ b/parser-games-log/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon src/index.js"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "mongoose": "^5.9.10"
+  },
   "devDependencies": {
     "nodemon": "^2.0.3"
   }
