--- a/parser-games-log/package.json
+++ b/parser-games-log/package.json
@@ -7,6 +7,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "license": "MIT",
