--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec sucrase-node src/index.js"
+    "dev": "nodemon --exec sucrase-node src/index.js",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --watch"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -12,11 +13,17 @@
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-jest": "^25.4.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.4.0",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
-    "sucrase": "^3.13.0"
+    "sucrase": "^3.13.0",
+    "supertest": "^4.0.2"
   }
 }
