--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --watch"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10"
